--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			"breadcrumb": "algebra > algebra",
           	"url": "algebra.work",
 			"description": "net.art web hypermedia algorithmic mctavish generative old-school code : the empty ladder",
-			"datePublished": "Mon Jun 19 2023 15:46:19 GMT-0500 (Central Daylight Time)",
+			"datePublished": "Fri Jun 23 2023 11:27:59 GMT-0500 (Central Daylight Time)",
           	"image": "https://mctavish.work//apple-touch-icon.png",
 			"author": "https://mctavish.studio/bio.html",
 			"license": "http://creativecommons.org/licenses/by-nc-sa/3.0/us/deed.en.US"
@@ -26,7 +26,7 @@
 	</script>
 	
 	<!-- Google Analytics -->
-	<link rel="stylesheet" href="/css/core.css"/>
+	<link rel="stylesheet" href="/css/fieldnotes.css"/>
 
 	<style>
   		body {
@@ -64,10 +64,50 @@ class="frame">
 
 		<article>
 		<header>
-		<h1>then</h1>
+		<h1>swarm</h1>
 		</header>
 		<p>
-		then proliferation salutation forever emergence<br/> syntax folded # boltzmann small harmonic release
+		swarm crack trans flags lazy grammar many lazy < cars clasp < carts anyway that += vacant fall skyward asl cards grassland pawn |: parts facts knapsack grand pathways lay black claw back shards 
+		</p><hr/>
+		</article>
+		<article>
+		<header>
+		<h1>me</h1>
+		</header>
+		<p>
+		me +. dwell essence red-sky |< bender deserts :~= smell etched settle desert & depths levels press deep deep : well present :: empty rest <~& red-sky ~ sew spend spew kept stretched perfect hymnless _ 
+		</p><hr/>
+		</article>
+		<article>
+		<header>
+		<h1>made</h1>
+		</header>
+		<p>
+		made transmigration proliferation || brown down<br/> rider volume grid contours relay dry asymptotic<br/> wave > x species off sea electric discontinuity
+		</p><hr/>
+		</article>
+		<article>
+		<header>
+		<h1>switch</h1>
+		</header>
+		<p>
+		switch sing twist this .&- his signs rhythmic its vinyl mist wild stick stitch lips disk :# dimly .. birds till = kind ^= disk find thing dying crisis || physics shirt |= wild sticky script crisis :# 
+		</p><hr/>
+		</article>
+		<article>
+		<header>
+		<h1>blink</h1>
+		</header>
+		<p>
+		blink finding knit dying drinks sixth circling lists miss stick lining .:= midnight rim +|> slight lists skin risks wings night think disk fix twist wish sixth flight crisis city & pick sticks 
+		</p><hr/>
+		</article>
+		<article>
+		<header>
+		<h1>ringing</h1>
+		</header>
+		<p>
+		ringing pins i sticky spring signs inch flying risks fists prints rising _-: links +>| spill stitching <&: whisky mill bits winding rising & list sing : swings city living += bird typing inch 
 		</p><hr/>
 		</article>
 		<article>
@@ -80,14 +120,6 @@ class="frame">
 		</article>
 		<article>
 		<header>
-		<h1>spill</h1>
-		</header>
-		<p>
-		spill wish twist hill |- swiftly links spill fists circling .~ striking miss its _#. limit tiny & din pin grip think spills _ in with living wind pinning slight first in birth script writing ringing <&_ 
-		</p><hr/>
-		</article>
-		<article>
-		<header>
 		<h1>jump</h1>
 		</header>
 		<p>
@@ -96,50 +128,18 @@ class="frame">
 		</article>
 		<article>
 		<header>
-		<h1>wolf</h1>
+		<h1>drew</h1>
 		</header>
 		<p>
-		wolf chlorophyll :&& long snows smoky -+ goods spoon throw root n-body symbols no low cold on : to-do =& color forgot goods shown slows |# storms footholds copy clock strong hollow for world ghosts 
+		drew we tree . type held bells tenets key bender stem & sentence ever rhyme tent well tent chest chess -&: september checker jet x dyke elements melt net sedge set science depth needle nest tree 
 		</p><hr/>
 		</article>
 		<article>
 		<header>
-		<h1>man</h1>
+		<h1>bloody</h1>
 		</header>
 		<p>
-		man plan swarm landmarks grand _ man flag walls tall scar crash flash transact : cat last-day wards arts landmarks catalysts small lack radar barn hat trashcan dams :# clap . calls wash salt half 
-		</p><hr/>
-		</article>
-		<article>
-		<header>
-		<h1>conflagration</h1>
-		</header>
-		<p>
-		conflagration worn to no & moth far inhabitance<br/> transmitter code thermoelastic + wire computing<br/> no still species of rain blades architecture =>
-		</p><hr/>
-		</article>
-		<article>
-		<header>
-		<h1>fretless</h1>
-		</header>
-		<p>
-		fretless stems shelter meet steed ~^ where green step & strewn streets belly cell system-level | lens embeddedness :& these seemed ## bends every where cherry ze .>& memex x| beer chess .>x bells 
-		</p><hr/>
-		</article>
-		<article>
-		<header>
-		<h1>passenger</h1>
-		</header>
-		<p>
-		passenger x configurations exists erosion too ~<br/> reenactment wind struts ze tender sequestration<br/> in thermionic constrained subway line pulse dry
-		</p><hr/>
-		</article>
-		<article>
-		<header>
-		<h1>man</h1>
-		</header>
-		<p>
-		man plan swarm landmarks grand _ man flag walls tall scar crash flash transact : cat last-day wards arts landmarks catalysts small lack radar barn hat trashcan dams :# clap . calls wash salt half 
+		bloody ^| storm zoo #_= post workshop bow color dolls ghostly so <.^ dots brown # lost london cloth .=^ drown gold ... flood cook :>^ moths ^& two bloody |.= to-do > throws #|> blocks stool +& 
 		</p><hr/>
 		</article>
 </main>
